--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,15 @@ html,
 body {
   height: 100%;
 }
+
+html {
+  font-size: 62.5%;
+}
+
+p {
+  font-size: 1.6rem;
+}
+
 /*
   Typographic tweaks!
   4. Add accessible line-height
@@ -72,9 +81,25 @@ h6 {
   --color-primary: #217bf4;
   --color-secondary: #ffaf2e;
   --color-text: #0a093d;
+  --full-width: 1170px;
+
+  --space-1: 1.6rem;
+  --space-1-5: 2.4rem;
 }
 
 body {
   color: var(--color-text);
   font-family: "Inter", sans-serif;
+}
+
+.header {
+  width: var(--full-width);
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header__nav {
+  display: flex;
+  gap: 7.2rem;
 }
